--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="lien"><a href="mailto:contact@guillaumegreff.com">contact</a></div>
 
-            <div class="lien"><a href="http://guillaumegreff.tumblr.com/">blog</a></div>
+            <div class="lien"><a href="http://guillaumegreff.tumblr.com/">news</a></div>
         <p></p>
     </div>
 
