nouveau pdf moins lourd

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="content">
         <h1>guillaume greff</h1>
         <p>
-            </p><div class="lien"><a href="./DA_GGREFF_2018.pdf">about</a></div>
+            </p><div class="lien"><a href="./greff_da_2018.pdf">about</a></div>
 
             <div class="lien"><a href="mailto:contact@guillaumegreff.com">contact</a></div>
 
