--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
 <body style="width: 100%; height: 100%;">
 
     <div id="content">
-        <h1>guillaume greff</h1>
-        <p>
-            </p><div class="lien"><a href="./greff_da_2018.pdf">about</a></div>
+        <div class="lien">
+            <a href="./GREFF_2019.pdf">
+                <img src="./PDF.png" width="20%" />
+            </a>
+        </div>
 
-            <div class="lien"><a href="mailto:contact@guillaumegreff.com">contact</a></div>
-
-            <div class="lien"><a href="http://guillaumegreff.tumblr.com/">news</a></div>
-        <p></p>
     </div>
 
     <div id="background-image" style="height: 100%; width: 100%; overflow: hidden; position: fixed; top: 0px; left: 0px; z-index: 1;">
-        <img src="./accueil.jpg" width="1778" height="1240" alt="background" />
+        <img src="./hello.jpg" width="1800" height="1161" alt="background" />
     </div>
     <script src="./jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="./jquery.fullscreenBackground.js"></script>
